change heading style

--- a/public/styles.css
+++ b/public/styles.css
@@ -20,7 +20,7 @@ header {
 
 header h1 {
 	color: #fff;
-	font-family: 'McLaren', cursive;
+	font-family: 'McLaren';
 	font-weight: 200;
 	text-align: center;
 }
